--- a/index.html
+++ b/index.html
@@ -81,34 +81,19 @@
                     </div>
                     <div class="alert alert-primary" role="alert">Use the rom on the left to search for a movie</div>
 
-                    <div class="card__box row justify-content-around">
-                        <div class="card" style="width: 21rem;">
-                            <img src="./image/card-img1.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Avengers: infinity var</h5>
-                                <p><i class="fas fa-calendar"></i> 2018</p>
-                                <p><i class="fas fa-star text-warning"></i> 8.7</p>
-                                <div>
-                                    <button type="button" class="btn btn-outline-primary btn-sm">watch trailer</button>
-                                    <button type="button" class="btn btn-outline-primary btn-sm">More info</button>
-                                    <button type="button" class="btn btn-outline-primary btn-sm">Bookmark</button>
-                                </div>
-                            </div>
+                    <!-- main.js jsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjsjs -->
+
+                    <div class="card__box d-flex justify-content-between" style="flex-wrap: wrap;">
+                        <div class="card" style="width: 21rem">
+
                         </div>
+
                         <div class="card" style="width: 21rem;">
-                            <img src="./image/card-img2.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">The avengers</h5>
-                                <p><i class="fas fa-calendar"></i> 2012</p>
-                                <p><i class="fas fa-star text-warning"></i> 8.1</p>
-                                <div>
-                                    <button type="button" class="btn btn-outline-primary btn-sm">watch trailer</button>
-                                    <button type="button" class="btn btn-outline-primary btn-sm">More info</button>
-                                    <button type="button" class="btn btn-outline-primary btn-sm">Bookmark</button>
-                                </div>
-                            </div>
+
                         </div>
-                    </div> <!-- end off card -->
+                    </div>
+
+                    <!-- end off card  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh-->
                     <nav class="mt-5 position-absolute start-50 translate-middle-x"
                         aria-label="Page navigation example">
                         <ul class="pagination">
@@ -132,6 +117,8 @@
 
         </div>
     </section>
+    <script src="./js/movies.js"></script>
+    <script src="./js/main.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 </body>
 
